--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serenity = "0.12.2"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
