--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 				}
 			},
 			"extensions": [
-				"nyxiative.rust-and-friends"
+				"nyxiative.rust-and-friends",
+				"rust-lang.rust-analyzer"
 			]
 		}
 	}
