--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 async-std = "1.12.0"
 poise = "0.6.1"
+rustube = "0.6.0"
+rusty_ytdl = "0.7.4"
 serenity ={version = "0.12.2", default-features=false,features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
