--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,11 @@
 	"dockerComposeFile": [
 		"docker-compose.yml"
 	],
+	"settings": {
+		"files.watcherExclude": {
+			"**/target/**": true
+		}
+	},
 	"service": "rust_devcontainer",
 	"workspaceFolder": "/workspace",
 	"customizations": {
