--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,14 @@
 {
-    // IntelliSense を使用して利用可能な属性を学べます。
-    // 既存の属性の説明をホバーして表示します。
-    // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceRoot}/app/target/debug/app.exe",
-            "args": [],
-            "cwd": "${workspaceRoot}/app/target/debug/",
-            "sourceLanguages": [
-                "rust"
-            ]
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Rust Debug Launch",
+      "program": "${workspaceFolder}/app/target/debug/app.exe",
+      "args": [],
+      "cwd": "${workspaceFolder}/app/target/debug/",
+      "sourceLanguages": ["rust"]
+    }
+  ]
 }
