--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,3 +11,6 @@ rustube = "0.6.0"
 rusty_ytdl = "0.7.4"
 serenity ={version = "0.12.2", default-features=false,features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.40"
+tracing-core = "0.1.32"
+tracing-subscriber = {version="0.3.18",features=["chrono"]}
