--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,11 +6,16 @@ edition = "2021"
 [dependencies]
 async-std = "1.12.0"
 dotenvy = "0.15.7"
+opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio", "metrics"] }
+opentelemetry-otlp = { version = "0.11.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
+opentelemetry_sdk = "0.24.1"
 poise = "0.6.1"
 rustube = "0.6.0"
 rusty_ytdl = "0.7.4"
 serenity ={version = "0.12.2", default-features=false,features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1.40"
+tracing = "0.1.37"
+tracing-futures = "0.2.5"
+tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
 tracing-core = "0.1.32"
 tracing-subscriber = {version="0.3.18",features=["chrono"]}
