--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -12,10 +12,19 @@ opentelemetry_sdk = "0.24.1"
 poise = "0.6.1"
 rustube = "0.6.0"
 rusty_ytdl = "0.7.4"
-serenity ={version = "0.12.2", default-features=false,features = ["client", "gateway", "rustls_backend", "model"] }
+serenity ={version = "0.12.2", default-features=false,features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
 tracing-core = "0.1.32"
 tracing-subscriber = {version="0.3.18",features=["chrono"]}
+songbird = "0.4.3"
+audiopus = "0.2.0"
+
+[dependencies.symphonia]
+version = "0.5.2"
+features = ["aac", "mp3", "isomp4", "alac"]
+
+[profile.dev]
+incremental = true
