--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -19,7 +19,7 @@ tracing-futures = "0.2.5"
 tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
 tracing-core = "0.1.32"
 tracing-subscriber = {version="0.3.18",features=["chrono"]}
-songbird = "0.4.3"
+songbird = {version="0.4.3",features=["builtin-queue"]}
 audiopus = "0.2.0"
 
 [dependencies.symphonia]
